--- a/Styles/style.css
+++ b/Styles/style.css
@@ -31,13 +31,13 @@
     display: flex;
     justify-content: space-between;
 }
-/* #search-bar {
+#search input {
     padding: 10px;
     font-size: 16px;
     border: 1px solid grey;
-    width: 60%;
-    background: #f1f1f1;
-} */
+    width: 500px;
+    background-color: #f1f1f1;
+} 
 #center{
 display: flex;
 justify-content: center;
@@ -45,4 +45,11 @@ align-items: center;
 flex-direction: column;
 height:100vh;
 
+}
+#nine-dots{
+    opacity: 0.6s;
+}
+#search img{
+    position:absolute;
+    top:207;
 }
