--- a/Styles/style.css
+++ b/Styles/style.css
@@ -50,6 +50,27 @@ height:100vh;
     opacity: 0.6s;
 }
 #search img{
-    position:absolute;
-    top:207;
+    position:relative;
+    right:515px;
+    top:15px;
+}
+#search-button{
+    padding: 10px;
+    font-size: 12px;
+    border: 1px solid grey;
+    background-color: #f1f1f1;
+}
+#lucky-button{
+    padding: 10px;
+    font-size: 12px;
+    border: 1px solid grey;
+    background-color: #f1f1f1;
+}
+#footer{
+    text-align: center;
+    font-style: arial;
+    margin-bottom: 40px;
+    background-color:rgb(199, 189, 189);
+    padding-top: 15px;
+    padding-bottom: 50px;
 }
